--- a/app/views/home/index2.html
+++ b/app/views/home/index2.html
@@ -85,8 +85,8 @@
 			<aside>
 				<h1>Sponsors</h1>
 				<div class="group">
-				<div id="sponsor1"><%= image_tag 'ad.jpg', 'width' => '125px', 'height' => '125px' %></div>
-				<div id="sponsor2"><%= image_tag 'ad.jpg', 'width' => '125px', 'height' => '125px' %></div>
+				<div id="sponsor1"><%= image_tag 'ad.jpg' %></div>
+				<div id="sponsor2"><%= image_tag 'ad.jpg' %></div>
 				</div>
 				
 				<h1>Most Popular</h1>
